Spacing issues again

--- a/assets/sass/layout/_main.scss
+++ b/assets/sass/layout/_main.scss
@@ -1,5 +1,5 @@
  .global-main {
-     padding-top: 80px;
+     padding-top: 85px;
 
      >* {
          background: #fff;
